[project]
name = "rag-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "langchain>=0.0.27",
    "langchain-community>=0.0.21",
    "openai>=2.2.0",
    "tiktoken>=0.4.0",
    "pinecone>=5.4.2",
    "python-dotenv>=1.0.1",
    "streamlit>=1.40.1",
]
